# cc-plugins

./: .gitignore  .markdownlint.json  README.md
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/workflows/: ci.yml  version-bump.yml
plugins/scaffold/: README.md
plugins/scaffold/.claude-plugin/: plugin.json
plugins/scaffold/agents/: repo-initializer.md
plugins/scaffold/commands/: init.md
plugins/scaffold/skills/scaffold-templates/templates/python/: ci.yml  devcontainer.json  dockerignore  gitignore  pyproject.toml
plugins/sdd/: .mcp.json  README.md
plugins/sdd/.claude-plugin/: plugin.json
plugins/sdd/agents/: constitution-guardian.md  implementer.md  plan-architect.md  spec-auditor.md  spec-author.md  task-decomposer.md
plugins/sdd/commands/: amend.md  analyze.md  checklist.md  clarify.md  constitution.md  implement.md  plan.md  specify.md  sync.md  tasks.md  trace.md
plugins/sdd/hooks/: drift-advisory.mjs  hooks.json  post-edit-drift.sh  session-start.sh
plugins/sdd/mcp/: package-lock.json  package.json  tsconfig.json  tsconfig.test.json
scripts/: validate-manifests.sh
usage-videos/: README.md  package-lock.json  package.json
usage-videos/src/: Composition.tsx  Root.tsx
usage-videos/src/components/: ChecklistRow.tsx  SpecPanel.tsx  Terminal.tsx  TextOverlay.tsx  WorkflowDiagram.tsx
usage-videos/src/data/: script.ts
usage-videos/src/scenes/: ChecklistScene.tsx  ConstitutionScene.tsx  ImplementScene.tsx  InstallScene.tsx  OutroScene.tsx  PlanScene.tsx  ScaffoldScene.tsx  SddWorkflowScene.tsx  SpecifyScene.tsx  (+2 more)
(+52 files in other folders)
